<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <SeekBar
        android:id="@+id/seekRed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/seekGreen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:layout_below="@+id/textView7"
        android:layout_alignParentStart="true" />

    <SeekBar
        android:id="@+id/seekBlue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="255"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/data_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_data"
        android:textSize="18sp"
        android:layout_below="@+id/connection_state"
        android:layout_toEndOf="@+id/textView4" />

    <TextView android:id="@+id/connection_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/disconnected"
        android:textSize="18sp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/data_value" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_state"
        android:textSize="18sp"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/isSerial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/is_serial"
        android:textSize="18sp"
        android:layout_below="@+id/data_value"
        android:layout_alignParentStart="true" />

    <TextView android:id="@+id/device_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_toEndOf="@+id/textView5"
        android:layout_below="@+id/data_value" />

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_device_address"
        android:textSize="18sp"
        android:id="@+id/textView5"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_data"
        android:textSize="18sp"
        android:id="@+id/textView6"
        android:layout_below="@+id/connection_state"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:text="@string/red_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/isSerial"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView7"
        android:text="@string/green_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/seekRed"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView2"
        android:text="@string/blue_slide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_below="@+id/seekGreen"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sensor Values"
        android:id="@+id/sensor"
        android:layout_below="@+id/seekBlue"
        android:layout_alignEnd="@+id/isSerial" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Accelerometer Values"
        android:id="@+id/textView3"
        android:layout_below="@+id/sensor"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/yText"
        android:layout_below="@+id/textView3"
        android:layout_toEndOf="@+id/xText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/xText"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/zText"
        android:layout_alignTop="@+id/yText"
        android:layout_toEndOf="@+id/yText" />

</RelativeLayout>